WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269341
"Look Up" popover is not attached to highlighted words at the end of a line on New York Times
https://bugs.webkit.org/show_bug.cgi?id=269341
Summary
"Look Up" popover is not attached to highlighted words at the end of a line o...
alan
Reported
2024-02-13 20:48:30 PST
<
rdar://120695659
>
Attachments
Patch
(12.32 KB, patch)
2024-02-13 20:56 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(29.75 KB, patch)
2024-02-14 08:31 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(32.91 KB, patch)
2024-02-14 10:42 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(36.95 KB, patch)
2024-02-14 13:51 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(29.82 KB, patch)
2024-02-15 15:05 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(31.85 KB, patch)
2024-02-15 16:46 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(31.80 KB, patch)
2024-02-16 05:21 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-02-13 20:56:05 PST
Created
attachment 469858
[details]
Patch
alan
Comment 2
2024-02-14 08:31:54 PST
Created
attachment 469861
[details]
Patch
alan
Comment 3
2024-02-14 10:42:43 PST
Created
attachment 469864
[details]
Patch
alan
Comment 4
2024-02-14 13:51:38 PST
Created
attachment 469866
[details]
[fast-cq]Patch
EWS
Comment 5
2024-02-14 15:46:55 PST
Committed
274668@main
(51e91d1ab3d4): <
https://commits.webkit.org/274668@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469866
[details]
.
Marta Darbinyan
Comment 6
2024-02-15 13:26:01 PST
breaks API test TestWebKitAPI.WKWebExtensionAPIMenus.MacSelectionContextMenuItems, tracking revert in
rdar://123027377
alan
Comment 7
2024-02-15 15:05:42 PST
Created
attachment 469900
[details]
Patch
alan
Comment 8
2024-02-15 16:46:28 PST
Created
attachment 469904
[details]
Patch
Ryosuke Niwa
Comment 9
2024-02-15 21:26:00 PST
Comment on
attachment 469904
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=469904&action=review
> Source/WebCore/editing/TextIterator.cpp:642 > + auto hasPreviousCollapsedWhitespace = m_lastTextNodeEndedWithCollapsedSpace || (m_textRun == firstTextRun && textRunStart == runStart && runStart);
Maybe hasPrecedingCollapsedWhitespace?
alan
Comment 10
2024-02-16 05:21:57 PST
Created
attachment 469919
[details]
[fast-cq]Patch
EWS
Comment 11
2024-02-16 08:02:39 PST
Committed
274829@main
(2b0a31814c1c): <
https://commits.webkit.org/274829@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469919
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug