"Look Up" popover is not attached to highlighted words at the end of a line on New York Times https://bugs.webkit.org/show_bug.cgi?id=269341 <rdar://120695659>

Reviewed by Ryosuke Niwa.

This patch ensures that we _always_ bail out of iterating the text content when beyond the range end position,
even when we are at a previously collapsed (trimmed) whitespace.
- remove TextIteratorBehavior::IgnoresWhiteSpaceAtEndOfRun workaround
- check for _range_ end (and not run end what IgnoresWhiteSpaceAtEndOfRun does) to see if we need to emit a whitespace

accessibility/element-line-rects-and-text.html seems to expect preserved trailing whitespace (the -expected.html change is unrelated to this patch
and is caused by continuation.

* LayoutTests/editing/text-iterator/sequential-collapsed-ranges.html:
* LayoutTests/editing/text-iterator/subrange-with-trailing-collapsed-whitespace.html:
* Source/WebCore/editing/TextIterator.cpp:
(WebCore::TextIterator::handleTextRun):
* Source/WebCore/editing/TextIteratorBehavior.h:
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::locationFromRange):
(WebCore::Internals::lengthFromRange):
(WebCore::Internals::statesOfTextIterator):
(WebCore::toTextIteratorBehaviors): Deleted.
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:
* Source/WebKit/WebProcess/WebPage/Cocoa/TextCheckingControllerProxy.mm:
(WebKit::TextCheckingControllerProxy::annotatedSubstringBetweenPositions):

Canonical link: https://commits.webkit.org/274668@main