Source/WebKit/WebProcess/WebPage/Cocoa/TextCheckingControllerProxy.mm
@@ -179,9 +179,7 @@ WebCore::AttributedString TextCheckingControllerProxy::annotatedSubstringBetween
 
     auto string = adoptNS([[NSMutableAttributedString alloc] init]);
 
-    constexpr TextIteratorBehaviors behaviors { TextIteratorBehavior::IgnoresWhiteSpaceAtEndOfRun };
-
-    for (TextIterator it(*entireRange, behaviors); !it.atEnd(); it.advance()) {
+    for (TextIterator it(*entireRange); !it.atEnd(); it.advance()) {
         if (!it.text().length())
             continue;
         [string appendAttributedString:adoptNS([[NSAttributedString alloc] initWithString:it.text().createNSStringWithoutCopying().get()]).get()];
